--- a/src/pages/staff.astro
+++ b/src/pages/staff.astro
@@ -4,7 +4,7 @@ import Base from "../layouts/Base.astro";
 const staff = [
   { name: "Robyn Haffield", role: "Senior Paralegal & Firm Manager" },
   { name: "Melanie Kelhoffer", role: "Senior Paralegal" },
-  { name: "Merrily Minardi", role: "Accounting Services" },
+  { name: "Sierra Gullo", role: "Florida Registered Paralegal" },
   { name: "Debbie Hogsten", role: "Accounting Services" },
   { name: "Gerard Scobie", role: "Client Support Services" },
   { name: "Lorraine Szappan", role: "Client Support Services" },
