--- a/src/pages/staff.astro
+++ b/src/pages/staff.astro
@@ -6,8 +6,7 @@ const staff = [
   { name: "Melanie Kelhoffer", role: "Senior Paralegal" },
   { name: "Sierra Gullo", role: "Florida Registered Paralegal" },
   { name: "Debbie Hogsten", role: "Accounting Services" },
-  { name: "Gerard Scobie", role: "Client Support Services" },
-  { name: "Lorraine Szappan", role: "Client Support Services" },
+  { name: "Sandy Robinson", role: "Paralegal" },
 ];
 
 // Function to turn first name into email
